--- a/layout/base.html
+++ b/layout/base.html
@@ -20,14 +20,23 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'photo:index' %}">Home<span class="sr-only">(current)</span></a>
                 </li>
+                {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'photo:create' %}">사진 올리기</a>
+                    <a class="nav-link" href="{% url 'photo:create' %}">Upload Photo</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
+                </li>
+                {% endif %}
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <!-- <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            </form> -->
         </div>
     </nav>
     {% block content %}
