소셜로그인으로 댓글달기 기능 구현

--- a/photo/templates/photo/photo_detail.html
+++ b/photo/templates/photo/photo_detail.html
@@ -10,8 +10,13 @@
                 <p class="card-text">{{ photo.text }}</p>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">수정일 : {{ photo.updated }}</li>
                 <li class="list-group-item">생성일 : {{ photo.created }}</li>
+                <li class="list-group-item">
+                    {% load disqus_tags %}
+                    <div class="card-body">
+                        {% disqus_show_comments %}
+                    </div>
+                </li>
             </ul>
             <div class="card-body">
                 <a href="{% url 'photo:update' photo.id %}" class="card-link">수정하기</a>
