--- a/layout/base.html
+++ b/layout/base.html
@@ -22,14 +22,14 @@
                 </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'photo:create' %}">Upload Photo</a>
+                    <a class="nav-link" href="{% url 'photo:create' %}">Upload Photo<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+                    <a class="nav-link" href="{% url 'accounts:logout' %}">Logout<span class="sr-only">(current)</span></a>
                 </li>
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
+                    <a class="nav-link" href="{% url 'accounts:login' %}">Login<span class="sr-only">(current)</span></a>
                 </li>
                 {% endif %}
             </ul>
@@ -39,8 +39,23 @@
             </form> -->
         </div>
     </nav>
+    <div class = "container">
+        {% if messages %}
+        <div class="row">
+            <div class="col"></div>
+            <div class="col-6">
+                {% for message in messages %}
+                <div class="alert alert-{{message.tag}}">{{message}}</div>
+                {% endfor %}
+            </div>
+            <div class="col"></div>
+        </div>
+        {% endif %}
+    </div>
+
     {% block content %}
     {% endblock %}
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
