--- a/layout/base.html
+++ b/layout/base.html
@@ -1,11 +1,60 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+        .btn-like {
+            display: inline-block;
+            width: 50px;
+            height: 50px;
+            background:url({% static 'images/icons.png' %});
+            background-position: -100px -400px;
+            text-indent: -9999px;
+            overflow: hidden;
+            border: none;
+        }
+
+        .btn-like.active {
+            display: inline-block;
+            width: 50px;
+            height: 50px;
+            background:url({% static 'images/icons.png' %});
+            background-position: -50px -400px;
+            text-indent: -9999px;
+            overflow: hidden;
+            border: none;
+        }
+
+        .btn-favorite {
+            display: inline-block;
+            width: 50px;
+            height: 50px;
+            background:url({% static 'images/icons.png' %});
+            background-position: -515px -150px;
+            text-indent: -9999px;
+            overflow: hidden;
+            border: none;
+        }
+
+        .btn-favorite.active {
+            display: inline-block;
+            width: 50px;
+            height: 50px;
+            background:url({% static 'images/icons.png' %});
+            background-position: -515px -100px;
+            text-indent: -9999px;
+            overflow: hidden;
+            border: none;
+        }
+    </style>
+
 </head>
+
 <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -22,14 +71,17 @@
                 </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'photo:create' %}">Upload Photo<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'photo:create' %}">Upload Photo<span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'accounts:logout' %}">Logout<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'accounts:logout' %}">Logout<span
+                            class="sr-only">(current)</span></a>
                 </li>
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'accounts:login' %}">Login<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'accounts:login' %}">Login<span
+                            class="sr-only">(current)</span></a>
                 </li>
                 {% endif %}
             </ul>
@@ -39,7 +91,7 @@
             </form> -->
         </div>
     </nav>
-    <div class = "container">
+    <div class="container">
         {% if messages %}
         <div class="row">
             <div class="col"></div>
