--- a/layout/base.html
+++ b/layout/base.html
@@ -86,6 +86,10 @@
                 </li>
                 {% else %}
                 <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'accounts:signup' %}">Sign up<span
+                            class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
                     <a class="nav-link" href="{% url 'accounts:login' %}"> Login <span
                             class="sr-only">(current)</span></a>
                 </li>
